objects/box__BoxSign_Signer__c/fields/box__BoxSign__c.field-meta.xml
<CustomField>
    <fullName>box__BoxSign__c</fullName>
    <label>Box Sign</label>
    <referenceTo>box__BoxSign__c</referenceTo>
    <relationshipLabel>Signers</relationshipLabel>
    <relationshipName>BoxSign_Signers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>