objects/box__BoxSign_Signer__c/fields/box__Contact__c.field-meta.xml
<CustomField>
    <fullName>box__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>BoxSign Signers</relationshipLabel>
    <relationshipName>BoxSign_Signers</relationshipName>
    <type>Lookup</type>
</CustomField>