objects/box__BoxSign_Signer__c/fields/box__Email__c.field-meta.xml
<CustomField>
    <fullName>box__Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>