objects/box__BoxSign_Signer__c/fields/box__Message__c.field-meta.xml
<CustomField>
    <fullName>box__Message__c</fullName>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>