objects/box__BoxSign_Signer__c/fields/box__Name__c.field-meta.xml
<CustomField>
    <fullName>box__Name__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>