objects/box__BoxSign_Signer__c/fields/box__SignerId__c.field-meta.xml
<CustomField>
    <fullName>box__SignerId__c</fullName>
    <externalId>true</externalId>
    <label>SignerId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>