objects/box__BoxSign_Signer__c/fields/box__Status__c.field-meta.xml
<CustomField>
    <fullName>box__Status__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>